--- a/frontend/The-Punch-Info.plist
+++ b/frontend/The-Punch-Info.plist
@@ -28,5 +28,9 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
